--- a/llms.html
+++ b/llms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text Watermarking Survey</title>
+    <title>Watermarking for LLMs - Text Watermarking Survey</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,6 +49,7 @@
 </header>
 
 <nav>
+    <a href="index.html">Home</a>
     <a href="overview.html">Overview</a>
     <a href="preliminaries.html">Preliminaries</a>
     <a href="existing-text.html">Watermarking for Existing Text</a>
@@ -58,9 +59,17 @@
     <a href="challenges.html">Challenges and Future Directions</a>
 </nav>
 
-<section id="home">
-    <h2>Welcome to the Text Watermarking Survey</h2>
-    <p>This survey provides a comprehensive overview of text watermarking techniques, with a focus on their applications in the era of Large Language Models (LLMs). Please use the navigation menu to explore different topics.</p>
+<section id="llms">
+    <h2>Watermarking for LLMs</h2>
+    <p>Techniques for incorporating watermarks during the text generation process...</p>
+</section>
+
+<section id="reading-list">
+    <h2>Reading List</h2>
+    <ul>
+        <li>Author, E. (Year). Watermarking Outputs of Large Language Models. ArXiv Preprint.</li>
+        <li>Author, F. (Year). Detecting AI-Generated Text via Embedded Watermarks. Conference Proceedings.</li>
+    </ul>
 </section>
 
 <footer>
