--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </header>
 
 <nav>
-    <a href="overview.html">Overview</a>
+    <a href="introduction.html">Introduction</a>
     <a href="preliminaries.html">Preliminaries</a>
     <a href="existing-text.html">Watermarking for Existing Text</a>
     <a href="llms.html">Watermarking for LLMs</a>
@@ -60,7 +60,7 @@
 
 <section id="home">
     <h2>Welcome to the Text Watermarking Survey</h2>
-    <p>This survey provides a comprehensive overview of text watermarking techniques, with a focus on their applications in the era of Large Language Models (LLMs). Please use the navigation menu to explore different topics.</p>
+    <p>This survey provides a comprehensive introduction of text watermarking techniques, with a focus on their applications in the era of Large Language Models (LLMs). Please use the navigation menu to explore different topics.</p>
 </section>
 
 <footer>
