--- a/overview.html
+++ b/overview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overview - Text Watermarking Survey</title>
+    <title>Introduction - Text Watermarking Survey</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,7 +50,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="overview.html">Overview</a>
+    <a href="introduction.html">Introduction</a>
     <a href="preliminaries.html">Preliminaries</a>
     <a href="existing-text.html">Watermarking for Existing Text</a>
     <a href="llms.html">Watermarking for LLMs</a>
@@ -59,9 +59,9 @@
     <a href="challenges.html">Challenges and Future Directions</a>
 </nav>
 
-<section id="overview">
-    <h2>Overview</h2>
-    <p>An overview of text watermarking techniques and their relevance in the era of LLMs...</p>
+<section id="introduction">
+    <h2>Introduction</h2>
+    <p>An introduction of text watermarking techniques and their relevance in the era of LLMs...</p>
 </section>
 
 <section id="reading-list">
