--- a/challenges.html
+++ b/challenges.html
@@ -50,7 +50,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="overview.html">Overview</a>
+    <a href="introduction.html">Introduction</a>
     <a href="preliminaries.html">Preliminaries</a>
     <a href="existing-text.html">Watermarking for Existing Text</a>
     <a href="llms.html">Watermarking for LLMs</a>
