--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         section {
             padding: 20px;
-            margin-bottom: 60px; /* Add space for footer */
+            margin-bottom: 60px;
         }
         footer {
             background: #333;
@@ -51,20 +51,43 @@
             margin-top: 20px;
         }
         .authors {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
             margin-top: 30px;
+        }
+        .author-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            gap: 20px;
+            justify-content: center;
+            margin-top: 20px;
         }
         .author {
             text-align: center;
+            background-color: #f9f9f9;
+            padding: 15px;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+        .author:hover {
+            transform: translateY(-5px);
         }
         .author img {
             width: 80px;
             height: 80px;
             border-radius: 50%;
             object-fit: cover;
+            margin-bottom: 10px;
+        }
+        .author p {
+            margin: 0;
+            font-size: 0.9em;
+        }
+        .author a {
+            color: #0066cc;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .author a:hover {
+            text-decoration: underline;
         }
         .news {
             margin-top: 30px;
@@ -72,6 +95,11 @@
         .news h3 {
             border-bottom: 2px solid #333;
             padding-bottom: 10px;
+        }
+        @media (max-width: 600px) {
+            .author-grid {
+                grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+            }
         }
     </style>
 </head>
@@ -100,46 +128,47 @@
     <div class="authors">
         <h3>Authors</h3>
         <hr>
-        <br>
-        <div class="author">
-            <img src="path/to/author1.jpg" alt="Author 1">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR1_ID" target="_blank">Author 1</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author2.jpg" alt="Author 2">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR2_ID" target="_blank">Author 2</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author3.jpg" alt="Author 3">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR3_ID" target="_blank">Author 3</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author4.jpg" alt="Author 4">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR4_ID" target="_blank">Author 4</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author5.jpg" alt="Author 5">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR5_ID" target="_blank">Author 5</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author6.jpg" alt="Author 6">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR6_ID" target="_blank">Author 6</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author7.jpg" alt="Author 7">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR7_ID" target="_blank">Author 7</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author8.jpg" alt="Author 8">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR8_ID" target="_blank">Author 8</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author9.jpg" alt="Author 9">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR9_ID" target="_blank">Author 9</a></p>
-        </div>
-        <div class="author">
-            <img src="path/to/author10.jpg" alt="Author 10">
-            <p><a href="https://scholar.google.com/citations?user=AUTHOR10_ID" target="_blank">Author 10</a></p>
+        <div class="author-grid">
+            <div class="author">
+                <img src="path/to/author1.jpg" alt="Author 1">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR1_ID" target="_blank">Author 1</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author2.jpg" alt="Author 2">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR2_ID" target="_blank">Author 2</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author3.jpg" alt="Author 3">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR3_ID" target="_blank">Author 3</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author4.jpg" alt="Author 4">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR4_ID" target="_blank">Author 4</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author5.jpg" alt="Author 5">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR5_ID" target="_blank">Author 5</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author6.jpg" alt="Author 6">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR6_ID" target="_blank">Author 6</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author7.jpg" alt="Author 7">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR7_ID" target="_blank">Author 7</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author8.jpg" alt="Author 8">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR8_ID" target="_blank">Author 8</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author9.jpg" alt="Author 9">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR9_ID" target="_blank">Author 9</a></p>
+            </div>
+            <div class="author">
+                <img src="path/to/author10.jpg" alt="Author 10">
+                <p><a href="https://scholar.google.com/citations?user=AUTHOR10_ID" target="_blank">Author 10</a></p>
+            </div>
         </div>
     </div>
 
