--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="authors">
         <h3>Authors</h3>
         <hr>
-        <p>Author 1, Author 2, Author 3, Author 4, Author 5, Author 6, Author 7, Author 8, Author 9, Author 10</p>
+        <p>Aiwei Liu*, Leyi Pan*, Yijian Lu, Jingjing Li, Xuming Hu, Xi Zhang, Lijie Wen, Irwin King, Hui Xiong, Philip S. Yu</p>
     </div>
 
     <div class="news">
