--- a/index.html
+++ b/index.html
@@ -143,15 +143,30 @@
     </div>
 
     <h3 id="evaluation">2. Evaluation Methods</h3>
-    <p>Evaluation methods for text watermarking algorithms, including their detectability, impact on text or LLM quality, and robustness under target or untargeted attacks.</p>
+    <p>We provide summarization of the evaluation metrics for text watermarking algorithms from multipule perspectives: 
+        (1) the detectability of watermarking algorithms, 
+        (2) the impact of watermarking on the quality of targeted texts,
+        (3) the robustness of watermarking algorithms against untargeted and targeted attacks.</p>
+    
+    <div>
+        <img src="images/taxonomy_evaluation.png" alt="Taxonomy of Evaluation Metrics" class="centered-image">
+        <p class="image-title">Fig. 3: Taxonomy of Evaluation Metrics for Text Watermarking.</p>
+    </div>
 
     <h3 id="applications">3. Application Scenarios</h3>
     <p>Potential application scenarios for text watermarking technology, including copyright protection and AI-generated text detection.</p>
+    <div>
+        <img src="images/taxonomy_application.png" alt="Taxonomy of application" class="centered-image">
+        <p class="image-title">Fig. 4: Taxonomy of Application Scenarios for Text Watermarking.</p>
+    </div>
 
     <h3 id="challenges">4. Challenges & Future Directions</h3>
     <p>Current challenges and future directions for text watermarking, including trade-offs in text watrmarking algorithm design, challenging scenarios for text watermarking algorithms, and challenges in applying watermark with no extra burden.</p>
 
-    <p>Please use the navigation menu to explore different topics.</p>
+    <div>
+        <img src="images/taxonomy_challenge.png" alt="Taxonomy of challenges" class="centered-image">
+        <p class="image-title">Fig. 5: Taxonomy of Challenges and Future Directions for Text Watermarking.</p>
+    </div>
 
     <div class="citation">
         <p>If you find our survey helpful, please cite it in your publications by clicking the Copy button below.</p>
