--- a/index.html
+++ b/index.html
@@ -106,20 +106,19 @@
             margin-bottom: 30px;
         }
         .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            gap: 20px;
-            padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
         }
         .card {
             background-color: #f9f9f9;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 20px;
-            width: calc(80% - 20px);
+            width: 80%;
             box-sizing: border-box;
-            margin: 20px;
+            margin: 20px 0;
         }
         .card h3 {
             text-align: center;
