--- a/index.html
+++ b/index.html
@@ -120,14 +120,16 @@
             padding: 20px;
             width: 90%;
             box-sizing: border-box;
-            margin: 30px 0;
+            margin: 20px 0;
         }
         .card h3 {
             text-align: center;
             color: #2c3e50;
             margin-top: 0;
         }
-        .card p {
+        .card p,
+        .card ul,
+        .card li {
             color: #34495e;
             line-height: 1.6;
         }
@@ -179,10 +181,11 @@
                     <li>Watermarking during LLM Training involves changing the LLM parameters to embed watermarks.</li>
                 </ul>
         </ul>
+        <br>
         
         <div>
             <img src="images/taxonomy_method.png" alt="Taxonomy of Text Watermarking Methods" class="centered-image">
-            <p class="image-title">Fig. 1: Taxonomy of Text Watermarking Methods.</p>
+            <p class="image-title">Fig. 2: Taxonomy of Text Watermarking Methods.</p>
         </div>
         </p>
         
